HFP-2484 Fix chapter scrollbar on fullscreen

--- a/src/styles/_pagecontent.scss
+++ b/src/styles/_pagecontent.scss
@@ -1,6 +1,7 @@
 .h5p-digibook-chapter {
   display: none;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
